legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc540/save_st/pragma-1.c-5.4.0-3.out.txt
pragma-1.c: In function ‘main’:
pragma-1.c:8:5: error: ‘error’ undeclared (first use in this function)
     error;
     ^
pragma-1.c:8:5: note: each undeclared identifier is reported only once for each function it appears in
